Alt+ clicking (assign to all selected) doesn not work for bone constraints settings #74006

Closed
opened 2020-02-19 15:45:12 +01:00 by abraham castilla · 11 comments

System Information
Operating system: Windows-10-10.0.10240-SP0 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7

Short description of error
Alt+ clicking (assign to all selected) doesn not work for bone constraints settings

Exact steps for others to reproduce the error
#74006.blend

  • open file
  • two bones are selected (both having a copy rotation constraint), Bone constraints panel should be open
  • try {key Alt click} on any setting (e.g. X) of the copy rotation constraint --> setting will only be changed on the active bone
  • for comparison, there are also two cube objects (also having a copy rotation constraint)
  • try {key Alt click} on any setting (e.g. X) of their copy rotation constraint --> setting will be changed for both objects
**System Information** Operating system: Windows-10-10.0.10240-SP0 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` **Short description of error** Alt+ clicking (assign to all selected) doesn not work for bone constraints settings **Exact steps for others to reproduce the error** [#74006.blend](https://archive.blender.org/developer/F8352896/T74006.blend) - open file - two bones are selected (both having a copy rotation constraint), Bone constraints panel should be open - try {key Alt click} on any setting (e.g. `X`) of the copy rotation constraint --> setting will only be changed on the active bone - for comparison, there are also two cube objects (also having a copy rotation constraint) - try {key Alt click} on any setting (e.g. `X`) of their copy rotation constraint --> setting will be changed for both objects

Added subscriber: @AbrahamCastilla

Added subscriber: @AbrahamCastilla
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, checking...
Looks like this is true for all options on bone constraints?

Can confirm, checking... Looks like this is true for **all** options on bone constraints?
Philipp Oeser changed title from multi selector bone restrictions does not work to Alt+ clicking (assign to all selected) doesn not work for bone constraints settings 2020-02-20 10:03:55 +01:00
Philipp Oeser self-assigned this 2020-02-20 10:53:13 +01:00
Member

Added subscriber: @iss

Added subscriber: @iss
Member

@iss: this doesnt seem to work in 2.79 either?
Anyways, I'll see if I can come up with something...

@iss: this doesnt seem to work in 2.79 either? Anyways, I'll see if I can come up with something...

I checked this with limit scale modifier on maximum X field. It worked in 2.79

I checked this with limit scale modifier on maximum X field. It worked in 2.79
Member

In #74006#876755, @iss wrote:
I checked this with limit scale modifier on maximum X field. It worked in 2.79

doesnt seem to work for me:
T74006_279.blend
{key Alt click} on Maximum X field only changes it for one bone here...

> In #74006#876755, @iss wrote: > I checked this with limit scale modifier on maximum X field. It worked in 2.79 doesnt seem to work for me: [T74006_279.blend](https://archive.blender.org/developer/F8353086/T74006_279.blend) {key Alt click} on `Maximum X` field only changes it for one bone here...

Sorry, I did extrude second bone, so both were affected when I tested this. I should have looked at actual values not only at result visually...

Sorry, I did extrude second bone, so both were affected when I tested this. I should have looked at actual values not only at result visually...

This issue was referenced by f2224ccfce

This issue was referenced by f2224ccfceb58e131886391efd656fdd79c561b8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74006
No description provided.